--- a/src/umr/templates/sideBar.html
+++ b/src/umr/templates/sideBar.html
@@ -15,7 +15,7 @@
         alt="Zeeguu Logo - The Elephant" />
     </a>
     <div class="dropdown">
-      <button class="dropbtn">| Articles <span id="arrow"></span></button>
+      <button class="dropbtn" onclick="location.href='/read'">| Articles <span id="arrow"></span></button>
       <div class="dropdown-content">
         <a href="/read"> All</a>
         <a href="/read/bookmarks">Bookmarks</a>
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class="dropdown">
-      <button class="dropbtn">| Words <span id="arrow"></span></button>
+      <button class="dropbtn" onclick="location.href='/bookmarks'">| Words <span id="arrow"></span></button>
       <div class="dropdown-content">
         <a href="/bookmarks">Translated</a>
         <a href="/starred_bookmarks">Starred</a>
@@ -32,11 +32,11 @@
       </div>
     </div>
     <div class="dropdown">
-      <button class="dropbtn">| Exercises <span id="arrow"></span></button>
+      <button class="dropbtn" onclick="location.href='/practice'">| Exercises <span id="arrow"></span></button>
       <div class="dropdown-content">
-        <a href="#">Easy</a>
-        <a href="#">Regular</a>
-        <a href="#">Ambitious</a>
+        <a href="/practice/#!/practice/plan/0">Easy</a>
+        <a href="/practice/#!/practice/plan/1">Regular</a>
+        <a href="/practice/#!/practice/plan/2">Ambitious</a>
       </div>
     </div>
     <script>
@@ -70,13 +70,38 @@
           }
         }
       }
+
+      function settingsFunction(element) {
+        var box = document.getElementById("hidden");
+        var boxstyle = box.style.display;
+        if (boxstyle == 'block') {
+          box.style.display = 'none';
+        } else {
+          box.style.display = 'block';
+        }
+      }
     </script>
 
 
     <div class="generalNavLinks">
 
+      <div class="hiddenSettingsBox" id="hidden">
+        <div class="hiddenOption">
+          <a class="hiddenText" href="/my_settings">Settings</a>
+        </div>
+        <div class="hiddenOption">
+          <a class="hiddenText" href="/stats">Statistics</a>
+        </div>
+        <div class="hiddenOption">
+          <a class="hiddenText" href="/teacher-dashboard">Teacher</a>
+        </div>
+        <div class="hiddenOption">
+          <a class="hiddenText">About</a>
+        </div>
+      </div>
+
       <div class="settingsbtn">
-        <a class="settingsLink" href="/my_settings">
+        <a class="settingsLink" onclick="settingsFunction(this)">
           <img class="settingsImg" src="{{ url_for('reader_blueprint.static',filename='images/settingsWheel.svg') }}"
             alt="Click here for general settings" />
         </a>
