--- a/src/umr/templates/sideBar.html
+++ b/src/umr/templates/sideBar.html
@@ -52,6 +52,10 @@
           if (document.getElementById('settingsContainer') !== null) {
             document.getElementById('settingsContainer').style.cssText = 'margin-left:12.5em;';
           }
+          if (document.getElementById('statsContainerID') !== null) {
+            document.getElementById('statsContainerID').style.cssText = 'margin-left:14em;';
+            document.getElementById('containerStats').style.cssText = 'margin-left:0em;';
+          }
           else {
             document.getElementById('wordsContainer').style.cssText = 'margin-left:22em;';
           }
@@ -64,6 +68,11 @@
           }
           if (document.getElementById('settingsContainer') !== null) {
             document.getElementById('settingsContainer').style.cssText = 'margin:auto;';
+          }
+          if (document.getElementById('statsContainerID') !== null) {
+            document.getElementById('statsContainerID').style.cssText = 'margin-left:0em;';
+            document.getElementById('containerStats').style.cssText = 'margin-left:6em;';
+
           }
           else {
             document.getElementById('wordsContainer').style.cssText = 'margin-left:16em;';
