sidebar changed for exercises front page

--- a/src/umr/templates/sideBar.html
+++ b/src/umr/templates/sideBar.html
@@ -56,6 +56,10 @@
             document.getElementById('statsContainerID').style.cssText = 'margin-left:14em;';
             document.getElementById('containerStats').style.cssText = 'margin-left:0em;';
           }
+          if (document.getElementById('starter-body') !== null) {
+            document.getElementById('starter-body').style.cssText = 'padding-left:11em;';
+            document.getElementById('footnotes').style.cssText = 'padding-left:5em;';
+          }
           else {
             document.getElementById('wordsContainer').style.cssText = 'margin-left:22em;';
           }
@@ -72,7 +76,10 @@
           if (document.getElementById('statsContainerID') !== null) {
             document.getElementById('statsContainerID').style.cssText = 'margin-left:0em;';
             document.getElementById('containerStats').style.cssText = 'margin-left:6em;';
-
+          }
+          if (document.getElementById('starter-body') !== null) {
+            document.getElementById('starter-body').style.cssText = 'padding-left:0em;';
+            document.getElementById('footnotes').style.cssText = 'padding-left:0em;';
           }
           else {
             document.getElementById('wordsContainer').style.cssText = 'margin-left:16em;';
