--- a/src/umr/templates/article.html
+++ b/src/umr/templates/article.html
@@ -134,7 +134,7 @@
             </h2>
             <div id="wordList"></div>
             <a href="/read"><button class="modalButton reviewBtn backArticles">Back to Articles</button></a>
-            <button class="modalButton reviewBtn">Continue to Exercises</button>
+            <a href="/practice"><button class="modalButton reviewBtn">Continue to Exercises</button></a>
           </div>
         </div>
       </div>
