--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -45,12 +45,12 @@
           </a>
 
           <div class="containerOptionsSorting">
-          <div class="options" id="optionsID">
-            <br /><br /><br />
+            <div class="options" id="optionsID">
+              <br /><br /><br />
 
 
 
-            <!---     <script>
+              <!---     <script>
           function onLoadMenu(){
             var w = window.outerWidth;
             var options = document.getElementById("optionsID");
@@ -62,13 +62,13 @@
         </script> -->
 
 
-            <!----  <span class="mdl-layout-title">
+              <!----  <span class="mdl-layout-title">
             My Interests
           </span>
           <br /> -->
 
-            <!-- List of content currently subscribed to. -->
-            <!--
+              <!-- List of content currently subscribed to. -->
+              <!--
           <span
             class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour"
           >
@@ -83,90 +83,90 @@
           <div id="languagesList"></div>
 
           <div style="font-size: xx-small">&nbsp;</div> -->
-            <div class="interestButton">
-              <span class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour">
-                <button type="button" class="mdl-chip__action show-topic-subscriber">
-                  <span class="mdl-chip__text">Interests</span>
-                  <!--  <i class="material-icons mdl-color-text--amber">add_circle</i>-->
-                </button>
-              </span>
-            </div>
-
-            <div id="searchesList"></div>
-            <div id="topicsList">
-              <div id="any_topic" style="display:none;">
-                &nbsp;&nbsp;&nbsp;&nbsp;<i style="color:gray">Showing all Interests...</i>
+              <div class="interestButton">
+                <span class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour">
+                  <button type="button" class="mdl-chip__action show-topic-subscriber">
+                    <span class="mdl-chip__text">Interests</span>
+                    <!--  <i class="material-icons mdl-color-text--amber">add_circle</i>-->
+                  </button>
+                </span>
               </div>
-            </div>
 
-            <div style="font-size: xx-small">&nbsp;</div>
-            <div class="interestButton">
-              <span class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour">
-                <button type="button" class="mdl-chip__action show-filter-subscriber">
-                  <span class="mdl-chip__text">
-                    <nobr>Non-Interests</nobr>
-                  </span>
-                  <!-- <i class="material-icons mdl-color-text--amber">add_circle</i>-->
-                </button>
-              </span>
-            </div>
-            <div id="searchesFilterList"></div>
-            <div id="topicsFilterList"></div>
+              <div id="searchesList"></div>
+              <div id="topicsList">
+                <div id="any_topic" style="display:none;">
+                  &nbsp;&nbsp;&nbsp;&nbsp;<i style="color:gray">Showing all Interests...</i>
+                </div>
+              </div>
 
-            <div style="font-size: xx-small">&nbsp;</div>
+              <div style="font-size: xx-small">&nbsp;</div>
+              <div class="interestButton">
+                <span class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour">
+                  <button type="button" class="mdl-chip__action show-filter-subscriber">
+                    <span class="mdl-chip__text">
+                      <nobr>Non-Interests</nobr>
+                    </span>
+                    <!-- <i class="material-icons mdl-color-text--amber">add_circle</i>-->
+                  </button>
+                </span>
+              </div>
+              <div id="searchesFilterList"></div>
+              <div id="topicsFilterList"></div>
 
-            <br />
-            <!--- <span class="mdl-layout-title">
+              <div style="font-size: xx-small">&nbsp;</div>
+
+              <br />
+              <!--- <span class="mdl-layout-title">
             Search
           </span>-->
-            <div class="seachField">
-              <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
-                <label class="mdl-button mdl-js-button mdl-button--icon" for="search-expandable">
-                  <!---   <i class="material-icons">search</i>-->
-                </label>
-                <div class="mdl-textfield__expandable-holder">
-                  <input class="mdl-textfield__input" type="text" id="search-expandable"
-                    placeholder="Search all articles" />
-                  <!--<label class="mdl-textfield__label" for="search-expandable"
+              <div class="seachField">
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
+                  <label class="mdl-button mdl-js-button mdl-button--icon" for="search-expandable">
+                    <!---   <i class="material-icons">search</i>-->
+                  </label>
+                  <div class="mdl-textfield__expandable-holder">
+                    <input class="mdl-textfield__input" type="text" id="search-expandable"
+                      placeholder="Search all articles" />
+                    <!--<label class="mdl-textfield__label" for="search-expandable"
                 >Search...</label
               >-->
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Sorting buttons-->
+            <div class="sortingCategories" id="sortingBox">
+              <div class="sortContainer">
+                <p id="sortby"> Sort by:</p>
+                <div class="wordsSorting">
+                  <div class="wordLabel">words</div>
+                  <div id="triangleWords" class="triangle"></div>
+                </div>
+                <div class="levelSorting">
+                  <div class="levelLabel">level</div>
+                  <div id="triangleLevel" class="triangle"></div>
                 </div>
               </div>
             </div>
           </div>
-          <!-- Sorting buttons-->
-          <div class="sortingCategories" id="sortingBox">
-            <div class="sortContainer">
-              <p id="sortby"> Sort articles by:</p>
-              <div class="wordsSorting">
-                <div class="wordLabel">words</div>
-                <div id="triangleWords" class="triangle"></div>
-              </div>
-              <div class="levelSorting">
-                <div class="levelLabel">level</div>
-                <div id="triangleLevel" class="triangle"></div>
-              </div>
-          </div>
-        </div>
-      </div>
         </nav>
       </div>
     </div>
 
-    
+
     <script>
       function searchIconFunction(element) {
         var options = document.getElementById("optionsID");
         var optionsstyle = options.style.display;
 
         var sortings = document.getElementById("sortingBox")
-        var sortingsstyle = sortings.style.display; 
-        if (optionsstyle == 'inline-flex' && sortingsstyle =='flex' ) {
+        var sortingsstyle = sortings.style.display;
+        if (optionsstyle == 'inline-flex' && sortingsstyle == 'flex') {
           options.style.display = 'none';
-          sortings.style.display = 'none'; 
+          sortings.style.display = 'none';
         } else {
           options.style.display = 'inline-flex';
-          sortings.style.display = 'flex'; 
+          sortings.style.display = 'flex';
 
         }
       }
@@ -181,7 +181,7 @@
 
         if (w >= 600) {
           options.style.display = 'inline-flex';
-          sortings.style.display = 'flex'; 
+          sortings.style.display = 'flex';
         } else {
           nav.style.display = 'none';
           document.getElementById("arrow-p").className = 'arrow-none-block';
@@ -194,7 +194,7 @@
       <div class="tagsOfInterests">
 
         <div class="interestsSettings">
-          <button class='closeTagsOfInterests'>X</button>
+          <button class='closeTagsOfInterests'>✓</button>
           <button class='addInterestButton'>Add + </button>
         </div>
       </div>
@@ -203,7 +203,7 @@
     <div class="widthOfColumn">
       <div class="tagsOfNonInterests">
         <div class="interestsSettings">
-          <button class='closeTagsOfNonInterests'>X</button>
+          <button class='closeTagsOfNonInterests'>✓</button>
           <button class='addNonInterestButton'>Add + </button>
         </div>
       </div>
@@ -219,15 +219,16 @@
             <br />
             <div id="emptyArticleListImage" class="emptyPage" style="display: none;">
 
-              <div class="icon-search"> 
-                <svg version="1.1" viewBox="0 0 50 50"><g>
-                <g class="notFound">
-                  <circle class="st0" cx="25" cy="25" r="17.1"/>
-                  <line class="st0" x1="53.4" y1="51.6" x2="38.8" y2="36.9"/>
-                </g>
+              <div class="icon-search">
+                <svg version="1.1" viewBox="0 0 50 50">
+                  <g>
+                    <g class="notFound">
+                      <circle class="st0" cx="25" cy="25" r="17.1" />
+                      <line class="st0" x1="53.4" y1="51.6" x2="38.8" y2="36.9" />
+                    </g>
                 </svg>
               </div>
-              <p> No articles</p> 
+              <p> No articles</p>
 
 
             </div>
@@ -236,7 +237,7 @@
               <div class="circle loading"></div>
               <p>Loading articles</p>
             </div>
-              
+
           </div>
         </section>
         <section class="mdl-layout__tab-panel" id="starred">
