--- a/src/umr/templates/sideBar.html
+++ b/src/umr/templates/sideBar.html
@@ -63,6 +63,9 @@
           if (document.getElementById("ex-module") !== null) {
             document.getElementById("ex-module").style.cssText = 'margin-left:12.5em;';
           }
+          if (document.getElementById("aboutContainer") !== null) {
+            document.getElementById("aboutContainer").style.cssText = 'margin-left:10em;';
+          }
           else {
             document.getElementById('wordsContainer').style.cssText = 'margin-left:22em;';
           }
@@ -87,6 +90,9 @@
           if (document.getElementById("ex-module") !== null) {
             document.getElementById("ex-module").style.cssText = 'margin-left:0px;';
           } 
+          if (document.getElementById("aboutContainer") !== null) {
+            document.getElementById("aboutContainer").style.cssText = 'margin-left:1em;';
+          }
           else {
             document.getElementById('wordsContainer').style.cssText = 'margin-left:16em;';
           }
@@ -118,7 +124,7 @@
           <a class="hiddenText" href="/teacher-dashboard" rel="external">Teacher</a>
         </div>
         <div class="hiddenOption">
-          <a class="hiddenText">About</a>
+          <a class="hiddenText" href="/about">About</a>
         </div>
       </div>
 
