--- a/src/umr/templates/article.html
+++ b/src/umr/templates/article.html
@@ -23,8 +23,8 @@
   <link rel="stylesheet" type="text/css"
     href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/style.css') }}" />
 
-  <!--FONT LINK-->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400&display=swap" rel="stylesheet" />
+  <!-- Fonts -->
+  <link href="{{ url_for('static', filename='fonts/montserrat.css') }}" type="text/css" rel="stylesheet" />
 
   <!-- Include the translation package. -->
   <link rel="stylesheet" type="text/css"
