--- a/src/umr/static/scripts/newStyling/article-settings.css
+++ b/src/umr/static/scripts/newStyling/article-settings.css
@@ -110,7 +110,7 @@ button {
   background: #fff4e2;
   border-radius: 0.5em;
   display: none;
-  width: 70%;
+  width: 73%;
   padding: 5px;
   text-align: center;
   overflow: auto;
@@ -121,7 +121,7 @@ button {
   background: #fff4e2;
   border-radius: 0.5em;
   display: none;
-  width: 70%;
+  width: 73%;
   padding: 5px;
   text-align: center;
   overflow: auto;
@@ -258,7 +258,8 @@ button {
   margin-top: 0.3em;
   margin-bottom: 0.2em;
   margin-right: 0.2em;
-  float: right;
+  margin-left: 0.5em;
+  float: left;
 }
 
 .addInterestButton:active, .addNonInterestButton:active {
@@ -278,7 +279,7 @@ button {
   font-weight: 400;
   text-align: center;
   min-width: 1.25em;
-  margin-top: 0.4375em;
+  margin-top: 0.2em;
   float: right;
 }
 
