--- a/src/umr/templates/addTopicDialog.html
+++ b/src/umr/templates/addTopicDialog.html
@@ -1,8 +1,5 @@
-<link
-  rel="stylesheet"
-  type="text/css"
-  href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/article-settings.css') }}"
-/>
+<link rel="stylesheet" type="text/css"
+  href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/article-settings.css') }}" />
 
 <!-- Template for the topic dialog -->
 <script id="add-topic-dialog-template" type="text/template">
