--- a/src/umr/static/scripts/newStyling/loading.css
+++ b/src/umr/static/scripts/newStyling/loading.css
@@ -7,6 +7,7 @@
 
 .circle {
   display: inline-block;
+  margin-bottom: 25px;
   width: 100px;
   height: 100px;
   border-radius: 50%;
@@ -50,6 +51,7 @@
   margin: auto;
   height: 4em;
   width: 3em;
+  margin-bottom: 25px;
 }
 
 svg {
