--- a/src/umr/templates/bookmarks.html
+++ b/src/umr/templates/bookmarks.html
@@ -70,7 +70,20 @@
         <div class="page-content">
           <ul id="starredArticleList" class="articleLinkList"></ul>
           <div id="emptyStarredArticleListImage" class="emptyPage">
+            
+
+            <div class="icon-search">
+              <svg version="1.1" viewBox="0 0 50 50">
+                <g>
+                  <g class="notFound">
+                    <circle class="st0" cx="25" cy="25" r="17.1" />
+                    <line class="st0" x1="53.4" y1="51.6" x2="38.8" y2="36.9" />
+                  </g>
+              </svg>
+            </div>
             <p> You have not bookmarked any articles yet!</p>
+
+
           </div>
         </div>
       </section>
