--- a/src/umr/templates/classroom.html
+++ b/src/umr/templates/classroom.html
@@ -72,7 +72,16 @@
         <div class="page-content">
           <ul id="cohortArticleList" class="articleLinkList"></ul>
           <div id="emptyCohortArticleListImage" class="emptyPage">
-            <p>There are no articles in your class</p>
+            <div class="icon-search">
+              <svg version="1.1" viewBox="0 0 50 50">
+                <g>
+                  <g class="notFound">
+                    <circle class="st0" cx="25" cy="25" r="17.1" />
+                    <line class="st0" x1="53.4" y1="51.6" x2="38.8" y2="36.9" />
+                  </g>
+              </svg>
+            </div>
+            <p>There are no articles in your class yet!</p>
           </div>
         </div>
       </section>
