--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -192,9 +192,9 @@
     </script>
     <div class="widthOfColumn">
       <div class="tagsOfInterests">
-
         <div class="interestsSettings">
           <button class='closeTagsOfInterests'>✓</button>
+          <button class='addInterestButton'>Add + </button>
         </div>
       </div>
 
@@ -203,6 +203,7 @@
       <div class="tagsOfNonInterests">
         <div class="interestsSettings">
           <button class='closeTagsOfNonInterests'>✓</button>
+          <button class='addNonInterestButton'>Add + </button>
         </div>
       </div>
     </div>
